- Fix the usage of the custom icons as the "_mount"/"_unmount" suffixes are not   used anymore in the current icon naming scheme

- Fix a small bug about an icon change doesn't trigger a save in the settings

BUG: 178824


svn path=/trunk/KDE/kdeutils/kdf/; revision=1009838